--- a/app/templates/new_comment.html
+++ b/app/templates/new_comment.html
@@ -2,6 +2,23 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+
+<div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.add') }}">Add</a>
+      </li>
+    </ul>
+  </div>
+</div>
+</nav>
 <div class="container-fluid">
     <div  style="background-color:#deeef9; padding-bottom: 130px; padding-top: 130px;" class="row">
             <div class="container">
@@ -43,4 +60,5 @@
     </div>
 
 </div>
+
 {% endblock%}
