--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -89,7 +89,7 @@ This is a brief introduction of myself. If you are interested in knowing more, r
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+            <p class="copyright text-muted">Copyright &copy; Perfect Blog 2018</p>
           </div>
         </div>
       </div>
