--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -83,7 +83,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+            <p class="copyright text-muted">Copyright &copy; Perfect Blog 2018</p>
           </div>
         </div>
       </div>
