added delete comment and it is working

--- a/app/templates/new_comment.html
+++ b/app/templates/new_comment.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="card-footer">
                             <h6><a href="#"><button class="btn btn-outline-success btn-sm"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Symbol_thumbs_up.svg/765px-Symbol_thumbs_up.svg.png" height="20px"></button></a>  <a href="#"><button class="btn btn-outline-warning btn-sm"> <img src="https://vignette.wikia.nocookie.net/candy-crush-jelly/images/2/2f/Thumbs-down-icon.png/revision/latest?cb=20151226072412" height="20px"></button></a><h6>
-                                    <p><a href="/delete/{{comment.id}}">Delete comment</a></p>
+                                <p><a href="/delet/{{comment.id}}">Delete comment</a></p>
 
                         </div>
                     </div>
